Fix hero alignment

--- a/src/main.css
+++ b/src/main.css
@@ -894,6 +894,7 @@ section[is="hero"] {
   & > h1 {
     font-size: 2em;
     margin-block: 0.48em;
+    margin-inline: auto;
 
     @media (min-width: 24rem) {
       font-size: 2.5em;
@@ -908,6 +909,7 @@ section[is="hero"] {
     font-family: Hoefler, serif;
     font-size: 1.73em;
     font-weight: 400;
+    margin-inline: auto;
 
     @media (min-width: 24rem) {
       font-size: 2em;
